# ukko

./: .gitignore  Attention.ipynb  Background Survival models.md  CoxPHModel.pt  Example_AML_test.ipynb  LinearCoxPH.pt  README.md  Run_tests.ipynb  Survival_data_artificial.ipynb  Survival_model_dev.backup.ipynb  Survival_model_dev.ipynb  Survival_test_ukko.ipynb  Survival_test_ukko_sinewave.ipynb  archive_repo.sh  best_cox_model.pt  best_sine_model.pt  env.yaml  howto_transfer_repo_to_acamedic.md  hyperparameter_results.txt  hyperparameter_results_2025-07-24.txt  hyperparameter_results_tmp.txt  lifelines_AML_model.ipynb  model_results.txt  pyproject.toml  recovery.py  torchsurv_AML_model.ipynb  torchsurv_AML_model_acamedic.ipynb  torchsurv_AML_model_acamedic_clean.ipynb  torchsurv_MLA_dev.ipynb  torchsurv_intro.ipynb  torchsurv_reguarisation.ipynb  ukko_get_started.ipynb  weight_checkpoint_2025-3-19_17-31-47_cKgtq5Nj4a8en11h2yLF.pt  weight_checkpoint_2025-3-20_8-17-46_Wv45TvDWqfgEXpPAQs6z.pt  weight_checkpoint_2025-3-20_8-7-5_9HylvRNWhkQuxmp3cspv.pt
.github/: copilot-instructions.md
acamedic/: torchsurv_reguarisation.ipynb
data/: df_xy_synth_v1.csv
experiments/: Survival_test_ukko-2025-06-03.ipynb  Survival_test_ukko-2025-06-03_2.ipynb  Survival_test_ukko-2025-06-04_1.ipynb  Survival_test_ukko-2025-06-05.ipynb  Survival_test_ukko_sinewave-2025-06-10.ipynb
src/ukko/: __init__.py  core.py  data.py  dev_embedding.ipynb  survival.py  test.py  tests_core.py  utils.py
tests/: test_dual_attention_classifier.py  tests_core.py
